[package]
name = "netconv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netconv"
path = "src/main.rs"

[dependencies]
netconv-core = { path = "../crates/netconv-core" }
netconv-parser-ios = { path = "../crates/netconv-parser-ios" }
netconv-render-vrp = { path = "../crates/netconv-render-vrp" }
clap = { version = "=4.4.18", features = ["derive"] }
serde_json = "1"
