[package]
name = "netconv-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
netconv-core = { path = "../netconv-core" }
netconv-parser-ios = { path = "../netconv-parser-ios" }
netconv-render-vrp = { path = "../netconv-render-vrp" }
wasm-bindgen = "=0.2.92"
serde-wasm-bindgen = "=0.6.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "=0.1.7"

[profile.release]
opt-level = "z"
lto = true
